fix images issues

--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand order-2 order-md-1" href="/index.html">
-        <img src="./src/img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
+        <img src="../img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -77,7 +77,7 @@
 
   <!-- Banner  -->
   <div class="banner">
-    <img src="./src/img/webp/Actividades/banner.jpg" alt="Actividades" />
+    <img src="../img/webp/Actividades/banner.jpg" alt="Actividades" />
     <div class="banner-text">
       <h1>Actividades</h1>
     </div>
@@ -113,7 +113,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Actividades/alpacas.jpg" class="img-fluid" alt="alimente-alpacas" />
+        <img src="../img/webp/Actividades/alpacas.jpg" class="img-fluid" alt="alimente-alpacas" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -140,7 +140,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./src/img/webp/Actividades/picnic.jpg" alt="picnic-jardin" class="img-fluid" />
+        <img src="../img/webp/Actividades/picnic.jpg" alt="picnic-jardin" class="img-fluid" />
       </div>
       <div class="col-md-6 order-md-1">
         <div class="text-section">
@@ -167,7 +167,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Actividades/pachamama.jpg" alt="Pachamama" class="img-fluid" />
+        <img src="../img/webp/Actividades/pachamama.jpg" alt="Pachamama" class="img-fluid" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -196,7 +196,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./src/img/webp/Actividades/cabalgata.jpg" alt="cabalgata" class="img-fluid" />
+        <img src="../img/webp/Actividades/cabalgata.jpg" alt="cabalgata" class="img-fluid" />
       </div>
       <div class="col-md-6 order-md-1">
         <div class="text-section">
