--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand order-2 order-md-1" href="/index.html">
-        <img src="./src/img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
+        <img src="../img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -77,7 +77,7 @@
 
   <!-- Banner  -->
   <div class="banner">
-    <img src="./src/img/webp/Delicias/banner.jpg" alt="Delicias de la Luna" />
+    <img src="../img/webp/Delicias/banner.jpg" alt="Delicias de la Luna" />
     <div class="banner-text">
       <h1>Delicias de la Luna</h1>
     </div>
@@ -115,7 +115,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Delicias/comida.jpg" alt="Killa Sacha Restaurante" class="img-fluid" />
+        <img src="../img/webp/Delicias/comida.jpg" alt="Killa Sacha Restaurante" class="img-fluid" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -131,7 +131,7 @@
           </p>
           <p>Abierto todos los días de 6:00 a. m. a 10:00 p. m.</p>
           <div class="text-center">
-            <a href="./src/downloadable/menupiedralunaresort.pdf" download>
+            <a href="../downloadable/menupiedralunaresort.pdf" download>
               <button type="button" class="btn btn-outline-success">
                 Ver Menú
               </button>
@@ -147,7 +147,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./src/img/webp/Delicias/salon.jpg" alt="Killa Sacha Restaurante" class="img-fluid" />
+        <img src="../img/webp/Delicias/salon.jpg" alt="Killa Sacha Restaurante" class="img-fluid" />
       </div>
       <div class="col-md-6 order-md-1">
         <div class="text-section">
@@ -174,7 +174,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Delicias/bar.jpg" alt="Piedra Luna Bar" class="img-fluid" />
+        <img src="../img/webp/Delicias/bar.jpg" alt="Piedra Luna Bar" class="img-fluid" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -206,7 +206,7 @@
     <h2>EXPERIENCIAS GASTRONÓMICOS</h2>
     <div class="row">
       <div class="col-md-6 text-center">
-        <img src="./src/img/webp/Delicias/pachamanca.jpg" alt="Pachamanca" class="img-fluid-2" />
+        <img src="../img/webp/Delicias/pachamanca.jpg" alt="Pachamanca" class="img-fluid-2" />
         <div class="text-card">
           <h3>PACHAMANCA</h3>
           <p><strong>Todos los dos primeros domingos de cada mes</strong></p>
@@ -220,7 +220,7 @@
       </div>
 
       <div class="col-md-6 text-center">
-        <img src="./src/img/webp/Delicias/parrilla_jardin.jpg" alt="Parrilla en el Jardin" class="img-fluid-2" />
+        <img src="../img/webp/Delicias/parrilla_jardin.jpg" alt="Parrilla en el Jardin" class="img-fluid-2" />
         <div class="text-card">
           <h3>PARRILLA EN EL JARDIN</h3>
           <p>
