--- a/src/pages/delicias_bar.html
+++ b/src/pages/delicias_bar.html
@@ -110,7 +110,7 @@
 
     <!-- Banner  -->
     <div class="banner">
-      <img src="./src/img/webp/Delicias_Bar/banner.jpg" alt="Delicias de la Luna" />
+      <img src="../img/webp/Delicias_Bar/banner.jpg" alt="Delicias de la Luna" />
       <div class="banner-text">
         <h1>Piedra Luna Bar</h1>
       </div>
