--- a/src/pages/spa.html
+++ b/src/pages/spa.html
@@ -78,7 +78,7 @@
   <main class="container-fluid mt-md-3 p-0">
     <!-- Banner -->
     <section class="banner mt-md-3">
-      <img src="./src/img/webp/Spa/banner.jpg" class="banner-img" alt="banner">
+      <img src="../img/webp/Spa/banner.jpg" class="banner-img" alt="banner">
       <h1 class="banner-text">Spa</h1>
     </section>
     <!-- End Banner -->
