--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -77,7 +77,7 @@
 
   <!-- Banner  -->
   <div class="banner">
-    <img src="./src/img/webp/Reservas/banner.jpg" alt="Reservas" />
+    <img src="../img/webp/Reservas/banner.jpg" alt="Reservas" />
     <div class="banner-text">
       <h1>Reservar</h1>
     </div>
@@ -104,7 +104,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Reservas/contacto.jpg" class="img-fluid" alt="Contacto" />
+        <img src="../img/webp/Reservas/contacto.jpg" class="img-fluid" alt="Contacto" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -133,7 +133,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./src/img/webp/Reservas/evento.jpg" alt="eventos" class="img-fluid" />
+        <img src="../img/webp/Reservas/evento.jpg" alt="eventos" class="img-fluid" />
       </div>
       <div class="col-md-6 order-md-1">
         <div class="text-section">
@@ -161,7 +161,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="./src/img/webp/Reservas/ubicacion.jpg" alt="Oficinas" class="img-fluid" />
+        <img src="../img/webp/Reservas/ubicacion.jpg" alt="Oficinas" class="img-fluid" />
       </div>
       <div class="col-md-6">
         <div class="text-section">
@@ -191,7 +191,7 @@
   <div class="content-section">
     <div class="row align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./src/img/webp/Reservas/redes.jpg" alt="Redes" class="img-fluid" />
+        <img src="../img/webp/Reservas/redes.jpg" alt="Redes" class="img-fluid" />
       </div>
       <div class="col-md-6 order-md-1">
         <div class="text-section">
