--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
     rel="stylesheet" />
   <!-- Se crea un segundo css para poder modificar algunos estilos del boostrap -->
-  <link rel="stylesheet" href="./src/css/auxiliar.css">
+  <link rel="stylesheet" href="/lab_design_web/src/css/auxiliar.css">
 </head>
 
 <body class="container-fluid m-0 p-0">
