--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="/lab_design_web/src/css/auxiliar.css">
 </head>
 
-<body class="ccontainer-fluid m-0 p-0">
+<body class="container-fluid m-0 p-0">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
