--- a/src/pages/spa.html
+++ b/src/pages/spa.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body>
+<body class="container-fluid m-0 p-0">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
@@ -75,74 +75,72 @@
   </nav>
   <!-- end Navbar -->
 
-  <main class="container-fluid mt-md-3 p-0">
-    <!-- Banner -->
-    <section class="banner mt-md-3">
-      <img src="../img/webp/Spa/banner.jpg" class="banner-img" alt="banner">
-      <h1 class="banner-text">Spa</h1>
-    </section>
-    <!-- End Banner -->
+  <!-- Banner -->
+  <section class="banner mt-md-3">
+    <img src="../img/webp/Spa/banner.jpg" class="banner-img" alt="banner">
+    <h1 class="banner-text">Spa</h1>
+  </section>
+  <!-- End Banner -->
 
-    <!-- Footer -->
-    <div class="footermar container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-md-10">
-          <hr />
-          <footer class="pt-4 my-md-5 pt-md-5">
-            <div class="footer-container">
-              <div class="row text-start text-md-start">
-                <div class="col-12 col-md-6 mb-3 mb-md-0">
-                  <h5>PIEDRA LUNA RESORT</h5>
-                  <p class="fw-bold mb-1">LLÁMANOS AL</p>
-                  <p class="mb-3">(01) 348-0687</p>
-                  <p class="fw-bold mb-1">
-                    Km. 75.8, Carretera Urubamba-Ollantaytambo
-                  </p>
-                  <p>Valle Sagrado, Cusco, Perú</p>
-                  <div class="footer-icons d-flex justify-content-start justify-content-md-start">
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
-                      class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
-                      style="width: 40px; height: 40px"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/piedraluna_resort/" target="_blank"
-                      class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
-                      style="width: 40px; height: 40px"><i class="fab fa-instagram"></i></a>
-                    <a href="https://open.spotify.com/playlist/1CLEPKaJssNgufFQp2aJDn?si=05f74ea2907f44d6"
-                      target="_blank"
-                      class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
-                      style="width: 40px; height: 40px">
-                      <i class="fab fa-spotify"></i>
-                    </a>
+  <!-- Footer -->
+  <div class="footermar container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10">
+        <hr />
+        <footer class="pt-4 my-md-5 pt-md-5">
+          <div class="footer-container">
+            <div class="row text-start text-md-start">
+              <div class="col-12 col-md-6 mb-3 mb-md-0">
+                <h5>PIEDRA LUNA RESORT</h5>
+                <p class="fw-bold mb-1">LLÁMANOS AL</p>
+                <p class="mb-3">(01) 348-0687</p>
+                <p class="fw-bold mb-1">
+                  Km. 75.8, Carretera Urubamba-Ollantaytambo
+                </p>
+                <p>Valle Sagrado, Cusco, Perú</p>
+                <div class="footer-icons d-flex justify-content-start justify-content-md-start">
+                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
+                    class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                    style="width: 40px; height: 40px"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.instagram.com/piedraluna_resort/" target="_blank"
+                    class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                    style="width: 40px; height: 40px"><i class="fab fa-instagram"></i></a>
+                  <a href="https://open.spotify.com/playlist/1CLEPKaJssNgufFQp2aJDn?si=05f74ea2907f44d6" target="_blank"
+                    class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                    style="width: 40px; height: 40px">
+                    <i class="fab fa-spotify"></i>
+                  </a>
 
-                    <a href="#"
-                      class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
-                      style="width: 40px; height: 40px"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://w.app/PiedraLunaResort" target="_blank"
-                      class="d-flex align-items-center justify-content-center rounded-circle border border-dark no-decoration"
-                      style="width: 40px; height: 40px"><i class="fab fa-whatsapp"></i></a>
-                  </div>
+                  <a href="#"
+                    class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                    style="width: 40px; height: 40px"><i class="fab fa-tiktok"></i></a>
+                  <a href="https://w.app/PiedraLunaResort" target="_blank"
+                    class="d-flex align-items-center justify-content-center rounded-circle border border-dark no-decoration"
+                    style="width: 40px; height: 40px"><i class="fab fa-whatsapp"></i></a>
                 </div>
-                <div class="footer-newsletter col-12 col-md-6">
-                  <h5>SUSCRÍBASE A LAS NEWSLETTER</h5>
-                  <div class="input-group">
-                    <input type="email" class="form-control" placeholder="introduce tu e-mail" />
-                    <button class="btn btn-outline-secondary" type="button"
-                      onclick="location.href='https://youtu.be/dQw4w9WgXcQ?si=tCQp0Cb7ofq7wIgZ';">
-                      <i class="fas fa-arrow-right"></i>
-                    </button>
-                  </div>
+              </div>
+              <div class="footer-newsletter col-12 col-md-6">
+                <h5>SUSCRÍBASE A LAS NEWSLETTER</h5>
+                <div class="input-group">
+                  <input type="email" class="form-control" placeholder="introduce tu e-mail" />
+                  <button class="btn btn-outline-secondary" type="button"
+                    onclick="location.href='https://youtu.be/dQw4w9WgXcQ?si=tCQp0Cb7ofq7wIgZ';">
+                    <i class="fas fa-arrow-right"></i>
+                  </button>
                 </div>
               </div>
             </div>
-          </footer>
-          <hr />
-          <div class="footer-copy text-start">
-            <p>&copy; PIEDRA LUNA RESORT 2024</p>
           </div>
+        </footer>
+        <hr />
+        <div class="footer-copy text-start">
+          <p>&copy; PIEDRA LUNA RESORT 2024</p>
         </div>
       </div>
     </div>
-    <!-- end Footer  -->
-  </main>
+  </div>
+  <!-- end Footer  -->
+
 
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
