--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -23,7 +23,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand order-2 order-md-1" href="/index.html">
+      <a class="navbar-brand order-2 order-md-1" href="../../index.html">
         <img src="../img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
