--- a/src/pages/delicias_bar.html
+++ b/src/pages/delicias_bar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delicias Bar</title>
-    <link rel="icon" href="/lab_design_web/src/img/icons/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/lab_design_web/src/css/delicias_bar.css" />
+    <link rel="icon" href="../img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/delicias_bar.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +30,7 @@
       class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
     >
       <div class="container-fluid">
-        <a class="navbar-brand order-2 order-md-1" href="/lab_design_web/index.html">
+        <a class="navbar-brand order-2 order-md-1" href="../../index.html">
           <img
             src="../img/webp/Home/LOGO.jpg"
             alt="Logo"
