--- a/src/pages/hotel.html
+++ b/src/pages/hotel.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel</title>
-    <link rel="icon" href="/lab_design_web/src/img/icons/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/lab_design_web/src/css/hotel.css" />
+    <link rel="icon" href="../img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/hotel.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,7 +31,7 @@
         class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
       >
         <div class="container-fluid">
-          <a class="navbar-brand order-2 order-md-1" href="/lab_design_web">
+          <a class="navbar-brand order-2 order-md-1" href="../../index.html">
             <img
               src="../img/webp/Home/LOGO.jpg"
               alt="Logo"
