--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservar</title>
-  <link rel="stylesheet" href="/lab_design_web/src/css/reservas.css">
-  <link rel="icon" href="/lab_design_web/src/img/icons/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="../css/reservas.css">
+  <link rel="icon" href="../img/icons/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
@@ -16,14 +16,14 @@
     href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
     rel="stylesheet" />
   <!-- Se crea un segundo css para poder modificar algunos estilos del boostrap -->
-  <link rel="stylesheet" href="/lab_design_web/src/css/auxiliar.css">
+  <link rel="stylesheet" href="../css/auxiliar.css">
 </head>
 
 <body class="container-fluid m-0 p-0">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand order-2 order-md-1" href="/index.html">
+      <a class="navbar-brand order-2 order-md-1" href="../../index.html">
         <img src="../img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
