--- a/src/pages/spa.html
+++ b/src/pages/spa.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spa</title>
-  <link rel="icon" href="/lab_design_web/src/img/icons/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/lab_design_web/src/css/spa.css">
+  <link rel="icon" href="../img/icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/spa.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
@@ -23,7 +23,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand order-2 order-md-1" href="/index.html">
+      <a class="navbar-brand order-2 order-md-1" href="../../index.html">
         <img src="../img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
